# oldstuff

./: LICENSE  amber11cvs2svn.bash  printseq.csh
ASIS/: README  automan  dssp_1982.pas  memhog.c
ASIS/Amber.on.Mac/: Template.xml
ASIS/MacOSX/: Nokia6301.txt
ASIS/ViennaRNA-1.7.2/: Makefile  Makefile.in  ViennaRNA.spec  config.h  config.status  configure  configure.in
ASIS/ViennaRNA-1.7.2/Kinfold/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  globals.c  main.c
ASIS/ViennaRNA-1.7.2/Kinfold/Example/: Makefile.in
ASIS/mdbnch/: function.list
ASIS/mdbnch2/: Makefile
ASIS/mddisplay/: dispui.c  dispui.h  makefile.bc  makefile.sgi  preproc.c
ASIS/scallop-1.0.1/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
ASIS/scallop-1.0.1/config-aux/: Makefile.am  Makefile.in
ASIS/scallop-1.0.1/kAPI/: Makefile.am  Makefile.in  adder.C  adder.h  adder2.C  adder2.h  adder3.C  adder3.h  adder_numerics.f  def.h  dimensions.sh  init.C  init2.C  init3.C  io.C  io.h  io2.C  io2.h  io3.C  io3.h  p_domain.C  p_domain.h  p_domain2.C  p_domain2.h  p_domain3.C  p_domain3.h  p_grid.C  p_grid.h  p_grid2.C  p_grid2.h  p_grid3.C  p_grid3.h  s_grid.C  s_grid.h  s_grid2.C  s_grid2.h  s_grid3.C  s_grid3.h  s_grid_numerics.f  subtractor.C  (+9 more)
ASIS/scallop-1.0.1/src/: 3dpoisson.F  3dsine.F  Makefile.am  Makefile.in  exact_numerics.f  helpers.C  helpers.h  misc_numerics.f  nodal_fftwSolver.C  nodal_fftwSolver.h  nodal_infdmn.C  nodal_infdmn.h  nodal_multigrid_numerics.f  poisson.C  poisson.h  rhs_maker_numerics.f  scallop_macros.h  stencil.C  stencil.h  timer.h
ASIS/scallop-1.0.1/test/: Makefile.am  Makefile.in  poisson_test.C  poisson_test.h
Amber.on.Mac/: amber10_gleap.patch  config_amber.h_g95_MKL_LAM
ChemDoodleWeb/: ChemDoodleWeb-libs.js  ChemDoodleWeb.js
GPL/: avg.c  gettimeofday.c  runavg.c
GPL/ChemDoodleWeb/: README.txt
GPL/PDB Mode/: PDB Mode for (X)emacs.webarchive
GPL/lammps99/: README
GPL/md50/: COPYRIGHT  Changes  LICENSE  Makefile  Makefile.DEC  Makefile.T3E_mpi  Makefile.deb  Makefile.ifc  Makefile.ifort  Makefile.linux  Makefile.mpi  Makefile.pgi  Makefile.risc  Makefile.sp2  Makefile.static  README  (+30 more)
GPL/mead-2.2.7/: ChangeLog  INSTALLATION  Makefile.in  NEWS  PROBLEMS  README  README.MEAD-alpha-0.2.2  README.SAV  VERSION  acinclude.m4  configure  configure.in  make_windows_dist.sh  mkinstalldirs
GPL/mead-2.2.7/apps/: Makefile.common.in  Makefile.in  README
GPL/mead-2.2.7/apps/libmso/: AtomRegex.cc  AtomRegex.h  FlexiSite.cc  FlexiSite.h  Makefile.in  MultiFlexiSiteMol.cc  MultiFlexiSiteMol.h  MultiSiteMolecule.cc  MultiSiteMolecule.h  SiteInMulti.cc  SiteInMulti.h  SiteUtil.cc  SiteUtil.h
GPL/mead-2.2.7/apps/mulsidecomp/: Makefile.in  mulsidecomp.cc
GPL/mead-2.2.7/apps/multiflex/: Makefile.in  multiflex.cc
GPL/mead-2.2.7/apps/pair_interactions/: Makefile.in  pair_interactions.cc  pair_interactions.py
GPL/mead-2.2.7/apps/potential/: Makefile.in  potential.cc
GPL/mead-2.2.7/apps/potscan/: Makefile.in  potscan.cc
GPL/mead-2.2.7/apps/redti/: Makefile.in  pfix.c  redti.c  rfixpro.c  rfixprosee.c  tc.c
GPL/mead-2.2.7/apps/sav-driver/: Makefile.in  sav-driver.cc  sav-test.sh
GPL/mead-2.2.7/apps/solinprot/: Makefile.in  solinprot.cc
GPL/mead-2.2.7/apps/solvate/: Makefile.in  solvate.cc  solvate.py  solvate2.cc
GPL/mead-2.2.7/apps/sphericalHarmonic_test/: Makefile.in  sphericalHarmonic_test.cc
GPL/mead-2.2.7/autom4te.cache/: output.1  requests  traces.0  traces.1
GPL/mead-2.2.7/examples/: README
GPL/mead-2.2.7/examples/born/: README  born.ogm  born.pqr
GPL/mead-2.2.7/examples/br/: ARG.st  ASP.st  ASX.st  GLU.st  HE.pqr  HE.sites  LYR.st  LYS.st  README  RU.pqr  RU.sites  TYR.st
GPL/mead-2.2.7/examples/data/: ASPsgl.st  GLUsgl.st  LYSsgl.st  TYRsgl.st  bigsphere.pqr  lyso.sites  sphere.pqr
GPL/mead-2.2.7/examples/lysozyme/: CTLEUsgl.st  HSCsgl.st  NTLYSsgl.st  README  tric.ogm  tric.pqr
GPL/mead-2.2.7/examples/myoglobin/: ARG.st  ASP.st  COx-AmberBondi.mgm  COx-AmberBondi.ogm  COx-AmberBondi.pqr  COx-AmberBondi.sites.del  COx-AmberBondi.sites.del1  COx-AmberBondi.sites.del10  COx-AmberBondi.sites.del11  COx-AmberBondi.sites.del2  COx-AmberBondi.sites.del3  COx-AmberBondi.sites.del4  COx-AmberBondi.sites.del5  COx-AmberBondi.sites.del6  COx-AmberBondi.sites.del7  COx-AmberBondi.sites.del8  COx-AmberBondi.sites.del9  COx-AmberBondi.sites.eps  CTgly.st  GLU.st  HISdel.st  HISeps.st  LYS.st  NTval.st  PROPA.st  PROPD.st  README  TYR.st  collect-curves.pl  make-globals.pl  master.sh  run_mol_multimead.sh  runmcti.sh
GPL/mead-2.2.7/examples/solvacc/: sav-test.sh  trna.pqr
GPL/mead-2.2.7/libmead/: AtomSet.cc  Coord.h  DielCubeRep.cc  ElectrolyteEnvironment.cc  FDGridLevel.cc  FDGridLevel.h  FinDiffElstatPot.cc  Makefile.in  Potat.cc  SAVanal_calc.cc
GPL/mead-2.2.7/librx/: GNUmakefile  Makefile.in  regex.h  rx.c
GPL/mead-2.2.7/swig/: AccTag.py  CenteringStyle.py  HOWTO-WRAPPING  MEAD.j  MEAD_shadow.pat  MEADexcept.py  Makefile.in  PhysCondInstance.py  Python_funcs.h  README  bug.py  copy_shadow.rule  gen.el  genpot.py  interact.py  meadtypes.i  mkoperators.pl  mkoverloaded.pl  premade_MEAD.py  premade_MEAD_shadow.cc  removedefs.pl  sol.py  swig_shadow.rule  swigpp.el  tat.py  test.py
GPL/mead-2.2.7/testing/: Makefile.in  README
GPL/mead-2.2.7/testing/expect/: lyso-glu7.g  lyso-glu7.pkint  lyso-glu7.summ  multiflex-lyso-glu7-test  sphere-test-solinprot  sphere-test-solvate-epsin1  sphere-test-solvate-epsin4
GPL/mead-2.2.7/utilities/: GNUmakefile  README  assign_charmm_radch.pl  assign_parse_radch.pl  compare-multiflex-results.pl  parse_charges  relto_with.pl  sanity.pl  test.g  test.pkint  tiplot.pl
MacOSX/: Nokia6301.txt  VMDLauncher  mypkg.pl  sqlite3vaccum  xmgrace.sh
Numerical/: avg.c  print3D_hyperplane.f90
OpenPBS/: free-nodes  qterm
PublicDomain/: randomShuffle.bash
UnixOnOSX/: vcsprompt.bash  xmgrace.sh
Xraw-1.3.1/: Imakefile  LICENCE  README
mdbnch/: LICENSE  Makefile  function.list  second.f
newBSD/: memhog.f90  printseq.csh  readfilebyline.f90
(+497 files in other folders)
